--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="zh-Hant">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>澳門培華中學 - 二維碼生成器</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700;900&display=swap" rel="stylesheet">
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        font-family: 'Outfit', sans-serif;
+        background-color: #f0f9ff;
+      }
+      .bg-grid {
+        background-size: 40px 40px;
+        background-image: radial-gradient(circle, #bae6fd 1px, transparent 1px);
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
