--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>澳門培華中學 - 二維碼生成器</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Import Outfit for a clean, friendly, academic tech look -->
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700;900&display=swap" rel="stylesheet">
     <style>
       body {
         margin: 0;
         padding: 0;
-        overflow: hidden;
         font-family: 'Outfit', sans-serif;
-        background-color: #f0f9ff;
+        background-color: #f0f9ff; /* Light Sky Blue */
       }
+      /* Subtle grid background for academic structure */
       .bg-grid {
         background-size: 40px 40px;
         background-image: radial-gradient(circle, #bae6fd 1px, transparent 1px);
